Fixed single letter not being broken into Words correctly

--- a/examples/harfbuzz.css
+++ b/examples/harfbuzz.css
@@ -1,5 +1,9 @@
-#title {
-    font-size: 14px;
+* {
+    font-size: 20px;
+}
+
+#hebrew {
+    font-size: 50px;
 }
 
 #lorem_ipsum {
@@ -8,6 +12,7 @@
     color: white;
     text-align: left;
     padding: 50px;
+    letter-spacing: 10px;
 }
 
 #devangari {
